[package]
name = "fendermint_actors"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
fendermint_actor_activity_tracker = { path = "activity-tracker", features = ["fil-actor"] }
fendermint_actor_blobs = { path = "blobs", features = ["fil-actor"] }
fendermint_actor_blob_reader = { path = "blob_reader", features = ["fil-actor"] }
fendermint_actor_bucket = { path = "bucket", features = ["fil-actor"] }
fendermint_actor_chainmetadata = { path = "chainmetadata", features = ["fil-actor"] }
fendermint_actor_eam = { path = "eam", features = ["fil-actor"] }
fendermint_actor_gas_market_eip1559 = { path = "gas_market/eip1559", features = ["fil-actor"] }
fendermint_actor_hoku_config = { path = "hoku_config", features = ["fil-actor"] }
fendermint_actor_timehub = { path = "timehub", features = ["fil-actor"] }

[dependencies]
cid = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fendermint_actor_blobs = { path = "blobs" }
fendermint_actor_blob_reader = { path = "blob_reader" }
fendermint_actor_bucket = { path = "bucket" }
fendermint_actor_chainmetadata = { path = "chainmetadata" }
fendermint_actor_eam = { path = "eam" }
fendermint_actor_gas_market_eip1559 = { path = "gas_market/eip1559" }
fendermint_actor_hoku_config = { path = "hoku_config" }
fendermint_actor_timehub = { path = "timehub" }

[build-dependencies]
anyhow = { workspace = true }
fil_actors_runtime = { workspace = true, features = ["test_utils"] }
fil_actor_bundler = "6.1.0"
num-traits = { workspace = true }
toml = { workspace = true }
