[package]
name = "fendermint_app"
description = "Tendermint ABCI++ Application to implement an IPLD+FVM enabled sidechain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
libipld = { workspace = true }
libp2p = { workspace = true }
libp2p-bitswap = { workspace = true }
multiaddr = { workspace = true }
num-traits = { workspace = true }
openssl = { workspace = true }
prost = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
async-stm = { workspace = true }
tendermint = { workspace = true }
tendermint-config = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { workspace = true }
tower-abci = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trace4rs = { workspace = true }
literally = { workspace = true }

fendermint_abci = { path = "../abci" }
fendermint_app_options = { path = "./options" }
fendermint_crypto = { path = "../crypto" }
fendermint_app_settings = { path = "./settings" }
fendermint_storage = { path = "../storage" }
fendermint_rocksdb = { path = "../rocksdb" }
fendermint_rpc = { path = "../rpc" }
fendermint_eth_api = { path = "../eth/api" }
fendermint_vm_actor_interface = { path = "../vm/actor_interface" }
fendermint_vm_core = { path = "../vm/core" }
fendermint_vm_encoding = { path = "../vm/encoding" }
fendermint_vm_genesis = { path = "../vm/genesis" }
fendermint_vm_interpreter = { path = "../vm/interpreter", features = ["bundle"] }
fendermint_vm_message = { path = "../vm/message" }
fendermint_vm_resolver = { path = "../vm/resolver" }
fendermint_vm_topdown = { path = "../vm/topdown" }
fendermint_vm_snapshot = { path = "../vm/snapshot" }

fvm = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_car = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
ipc-api = { workspace = true }
ipc-provider = { workspace = true }
ipc_ipld_resolver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

fendermint_vm_genesis = { path = "../vm/genesis", features = ["arb"] }
fendermint_vm_snapshot = { path = "../vm/snapshot", features = ["arb"] }


# Load the same built-in actor bundle as the ref-fvm integration tests. We'll probably need built-in actors,
# for example to deploy Solidity code. We can compile Wasm actors and deploy them too, but certain functions
# in `ref-fvm` like looking up actor addresses depend on built-in actors like the `InitActor` maintaining state.
# NOTE: The following would add this as a dependency. The problem is that this makes it more difficult to compile
# the project because now when there is a new version of the FVM released, we also need a new version of the
# actor project to be released. In prod, we'd just load it from a file, so let's see if that works.
# We can build a bundle CAR with the Makefile.
# actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", branch = "next" }

# Using a single binary to run the application as well as to execute client commands.
[[bin]]
name = "fendermint"
path = "src/main.rs"
