[package]
name = "fendermint_crypto"
description = "Cryptographic utilities"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Defined here so no other crate keeps a direct reference to it.
libsecp256k1 = "0.7"

anyhow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
multihash = { workspace = true, features = ["multihash-impl", "blake2b"] }
serde = { workspace = true, optional = true }
fvm_ipld_encoding = { workspace = true, optional = true }
num-traits = { workspace = true }
num-rational = { workspace = true }


[features]
default = ["with_serde", "fvm_ipld_encoding"]
with_serde = ["serde"]