[package]
name = "fendermint_infra"
description = "Workflows for the deployment of Fendermint infrastructure"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]