[package]
name = "fendermint_rpc"
description = "Utilities working with the tendermint_rpc library to provide an API facade for Fendermint"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
libsecp256k1 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tendermint = { workspace = true }
tendermint-rpc = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

fendermint_vm_actor_interface = { path = "../vm/actor_interface" }
fendermint_vm_message = { path = "../vm/message", features = ["secp256k1"] }

[dev-dependencies]
clap = { workspace = true }
ethers = { version = "2.0", features = ["abigen"] }
hex = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
