[package]
name = "fendermint_testing"
description = "Testing utilities"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.2" }

[dev-dependencies]
arbtest = { version = "0.2" }
