[package]
name = "fendermint_testing"
description = "Testing utilities"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
arbitrary = { workspace = true }
quickcheck = { workspace = true }
hex = { workspace = true }

cid = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
arbtest = { workspace = true }
