[package]
name = "blobs_syscall"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ambassador = { workspace = true }
anyhow = { workspace = true }
fvm = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
iroh = { workspace = true }
maybe_iroh = { path = "../maybe_iroh" }
once_cell = "1.19.0"
