[package]
name = "hoku_executor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fvm = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }
replace_with = { workspace = true }
tracing = { workspace = true }

fendermint_actor_blobs_shared = { path = "../../fendermint/actors/blobs/shared" }
fendermint_vm_actor_interface = { path = "../../fendermint/vm/actor_interface" }

[features]
testing = []
