[package]
name = "hoku_ipld"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fil_actors_runtime = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
fvm_sdk = { workspace = true }
integer-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]